tests/negative/optimizer/sub.orng
fn main() -> Int {
    9223372036854775807 - (-2)
}